--- a/StudentEnrolmentWebApp/StudentEnrolmentWebApp.csproj
+++ b/StudentEnrolmentWebApp/StudentEnrolmentWebApp.csproj
@@ -18,4 +18,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Login\" />
+    <Folder Include="Views\UserInfo\" />
+    <Folder Include="Views\Student\" />
+    <Folder Include="Views\Registration\" />
+  </ItemGroup>
+
 </Project>
